# revora

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  run.bat
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260710_1400_init_core_tables.py  20260710_1405_github_app_tables.py  20260710_2225_bfd39850f721_add_reviews.py  20260711_1000_context_engine_tables.py  20260716_1000_prompt_builder_tables.py  20260716_1100_provider_registry.py  20260716_1200_token_usage_cost.py  20260716_1300_health_failover.py  20260716_1500_user_settings.py  20260716_1600_database_indexes.py  20260718_1200_verification_tables.py  20260720_1200_add_review_jobs.py  20260723_2059_91801a79cc5b_add_updated_at_to_review_jobs.py
backend/app/: main.py
backend/app/ai/: context_engine.py  git_utils.py  graph.py  llm.py  model_registry.py  models.py  prompts.py  state.py
backend/app/cache/: base_cache.py  graph_cache.py  memory_cache.py  metrics.py  redis_cache.py  retrieval_cache.py
backend/app/core/: auth.py  config.py  deps.py  (+2 more)
backend/tests/: conftest.py  test_api_keys.py  test_cache.py  test_compatibility_engine.py  test_compression_engine.py  test_fallback.py  test_graph_traversal.py  test_intelligence_engine.py  test_middleware.py  test_pipeline_orchestrator.py  test_pipeline_wiring.py  test_prompt_builder.py  test_queue.py  test_ranking_engine.py  test_repo_walker.py  test_retrieval_engine.py  test_retrievers.py  test_token_budget.py
(+262 files in other folders)
